--- a/base/exoplanets/deployment.yaml
+++ b/base/exoplanets/deployment.yaml
@@ -23,7 +23,7 @@ spec:
             name: exoplanets
         - secretRef:
             name: exoplanets
-        image: registry.ocp4.example.com:8443/redhattraining/exoplanets:v1.1.0
+        image: quay.io/redhattraining/exoplanets:v1.1.0
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
